gccida/g0/skip_line_comment
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_line_comment/src/cpplex.c:768:25: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
int  skip_line_comment( cpp_reader_0 *pfile) 
                        ^~~~~~~~~~~~
                        cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_line_comment/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_line_comment/src/cpplex.c:772:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // [rsp+20h] [rbp-10h] 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_line_comment/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_line_comment/src/cpplex.c:784:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)c] & 0x400) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_line_comment/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_line_comment/src/obj/cpplex.o] Error 1
